--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "GPL-3.0",
   "dependencies": {
     "chalk": "^2.3.0",
+    "clipboardy": "^1.2.2",
     "conf": "^1.3.1",
+    "log-symbols": "^2.1.0",
     "yargs": "^10.0.3"
   }
 }
