--- a/package.json
+++ b/package.json
@@ -2,18 +2,32 @@
   "name": "rdf.sh",
   "version": "0.9.0",
   "bin": {
-    "rdf2": "./index.js"
+    "rdf": "./rdf"
   },
+ "files": [
+    "rdf-legacy.bash",
+    "README.md",
+    "CHANGELOG.md",
+    "LICENSE"
+  ],
   "description": "A command-line tool for doing Semantic Web / Linked Data jobs.",
   "main": "index.js",
   "repository": "git@github.com:seebi/rdf.sh.git",
-  "author": "Sebastian Tramp <mail@sebastian.tramp.name>",
+  "author": {
+      "name": "Sebastian Tramp",
+      "email": "mail@sebastian.tramp.name",
+      "url": "https://sebastian.tramp.name"
+  },
+  "homepage": "https://github.com/seebi/rdf.sh",
   "license": "GPL-3.0",
   "dependencies": {
     "chalk": "^2.3.0",
     "clipboardy": "^1.2.2",
     "conf": "^1.3.1",
+    "lodash": "^4.17.4",
     "log-symbols": "^2.1.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "yargs": "^10.0.3"
   }
 }
